Opened 12 years ago

Closed 12 years ago

#9294 closed bug (fixed)

Some instances of typecasting cause crashes in TreeTableModel

Reported by: anevilyak Owned by: anevilyak
Priority: normal Milestone: R1
Component: Applications/Debugger Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by anevilyak)

In certain cases, typecasting a node causes a crash. Current working theory is that the number of rows being removed for the value nodes of the previous type is incorrect but needs further investigation.

Attachments (1)

Debugger-44366-debug-17-12-2012-03-30-51.report (15.4 KB ) - added by anevilyak 12 years ago.

Download all attachments as: .zip

Change History (4)

comment:1 by anevilyak, 12 years ago

Description: modified (diff)

comment:2 by anevilyak, 12 years ago

The above is further corroborated by the fact that typecasts that don't involve removing any previous nodes (i.e. casting a node of type void * to another type) don't cause any issues, whereas some subset of typecasts from one compound to another do, i.e. the above crash reliably triggers it by attempting to cast a node of type StackFrameDebugInfo* to DwarfStackFrameDebugInfo*.

comment:3 by anevilyak, 12 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev45021.

Note: See TracTickets for help on using tickets.