Fix #9294.

- Fix incorrect order of operations in ValueNodeManager.
- Upon receiving a changed notification, VariableTableModel needs to
  make tree table aware that the previous nodes have been removed.